finalizes modifications to font-face declarations

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -14,7 +14,7 @@
   src: local('Noto Sans Bold'), local('NotoSans-Bold'), url(https://fonts.gstatic.com/s/notosans/v9/o-0NIpQlx3QUlC5A4PNjXhFVZNyB.woff2) format('woff2');
 }
 
-$sans-serif: "Noto Sans", Test, Arial, sans-serif;
+$sans-serif: "Noto Sans", Arial, sans-serif;
 
 $red: hsl(357, 82%, 45%);
 $green: hsl(147, 82%, 33%);
