removes Noto Sans

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,21 +1,3 @@
-@font-face {
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Noto Sans'), local('NotoSans'), url(https://fonts.gstatic.com/s/notosans/v9/o-0IIpQlx3QUlC5A4PNr5TRA.woff2) format('woff2');
-}
-
-@font-face {
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: local('Noto Sans Bold'), local('NotoSans-Bold'), url(https://fonts.gstatic.com/s/notosans/v9/o-0NIpQlx3QUlC5A4PNjXhFVZNyB.woff2) format('woff2');
-}
-
-$sans-serif: "Noto Sans", Arial, sans-serif;
-
 $red: hsl(357, 82%, 45%);
 $green: hsl(147, 82%, 33%);
 
@@ -29,7 +11,7 @@ $green: hsl(147, 82%, 33%);
 html, body {
 	width: 100%;
 	height: 100%;
-	font-family: $sans-serif;
+	font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 	font-weight: 700;
 	font-size: 16px;
 	background: $red;
