--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -21,11 +21,6 @@ html, body {
 
 
 .container {
-	/* width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center; */
 	width: 100vw;
 	height: 100vh;
 	display: grid;
@@ -45,12 +40,24 @@ html, body {
 	h1 {
 		color: lighten($red, 54%);
 		font-size: 2.25rem;
+		margin-bottom: 10px;
 
 		&:before {
 			display: inline-block;
 			content: '🍅';
 			font-size: 2.25rem;
 			margin-right: 8px;
+		}
+	}
+
+	h2 {
+		font-size: 1.25rem;
+		font-weight: normal;
+		color: lighten($red, 52%);
+		margin: 0;
+
+		a {
+			color: inherit;
 		}
 	}
 }
