--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,24 +1,21 @@
 $red: hsl(357, 82%, 45%);
 $green: hsl(147, 82%, 33%);
 
-
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 }
 
-
 html, body {
 	width: 100%;
-	height: 100%;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-	font-weight: 700;
-	font-size: 16px;
+	height: auto;
 	background: $red;
 	background: linear-gradient($red, darken($red, 6%));
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+	font-size: 16px;
+	font-weight: 700;
 }
-
 
 .container {
 	width: 100vw;
@@ -26,7 +23,6 @@ html, body {
 	display: grid;
 	place-items: center;
 }
-
 
 .content {
 	display: block;
@@ -62,7 +58,6 @@ html, body {
 	}
 }
 
-
 .timer_links {
 	font-size: 0.8rem;
 
@@ -91,7 +86,6 @@ html, body {
 	}
 }
 
-
 @keyframes shake {
 	50% {
 		transform: rotate(1deg);
@@ -101,7 +95,6 @@ html, body {
 		transform: rotate(-1deg);
 	}
 }
-
 
 .timers {
 	font-variant-numeric: tabular-nums;
@@ -125,7 +118,6 @@ html, body {
 	}
 }
 
-
 .controls {
 	font-size: 0.8rem;
 	margin-bottom: 60px;
@@ -141,7 +133,6 @@ html, body {
 		}
 	}
 }
-
 
 .timer_button {
 	display: block;
@@ -168,12 +159,10 @@ html, body {
 	}
 }
 
-
 .reset {
 	display: inline-block;
 	margin: 0 15px;
 }
-
 
 footer {
 	font-size: 0.9rem;
@@ -194,7 +183,6 @@ footer {
 	}
 }
 
-
 .what-modal {
 	position: fixed;
 	top: 0;
@@ -206,11 +194,9 @@ footer {
 	backface-visibility: hidden;
 }
 
-
 .md-show {
 	visibility: visible;
 }
-
 
 .md-overlay {
 	position: fixed;
@@ -225,12 +211,10 @@ footer {
 	transition: all 0.3s;
 }
 
-
 .md-show ~ .md-overlay {
 	opacity: 0.9;
 	visibility: visible;
 }
-
 
 .md-effect .md-content {
 	-webkit-transform: scale(2);
@@ -243,7 +227,6 @@ footer {
 	transition: all 0.3s;
 }
 
-
 .md-show.md-effect .md-content {
 	-webkit-transform: scale(1);
 	-moz-transform: scale(1);
@@ -251,7 +234,6 @@ footer {
 	transform: scale(1);
 	opacity: 1;
 }
-
 
 .md-content {
 	height: 100%;
@@ -302,7 +284,6 @@ footer {
 	}
 }
 
-
 .close-modal {
 	display: block;
 	position: absolute;
@@ -316,7 +297,6 @@ footer {
 		text-decoration: none;
 	}
 }
-
 
 @media all and (min-width: 590px) and (max-height: 580px) {
 	.timer_links {
@@ -340,7 +320,6 @@ footer {
 	}
 }
 
-
 @media all and (min-width: 600px) and (min-height: 450px) {
 	.what-modal {
 		position: fixed;
@@ -358,7 +337,6 @@ footer {
 	}
 }
 
-
 @media all and (min-width: 500px) {
 	.timers {
 		font-size: .6rem;
@@ -368,7 +346,6 @@ footer {
 		font-size: 0.9rem;
 	}
 }
-
 
 @media all and (min-width: 550px) {
 	.timer_links {
@@ -382,7 +359,6 @@ footer {
 	}
 }
 
-
 @media all and (min-width: 700px) {
 	.timer_links {
 		font-size: 0.9rem;
@@ -393,7 +369,6 @@ footer {
 		}
 	}
 }
-
 
 @media all and (min-width: 1000px) and (min-height: 500px) {
 	.timer_links, .controls {
@@ -406,13 +381,11 @@ footer {
 	}
 }
 
-
 @media all and (min-width: 1400px) and (min-height: 700px) {
 	.timers {
 		font-size: 1rem;
 	}
 }
-
 
 @media all and (max-height: 400px) {
 	.timers {
