--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -19,7 +19,8 @@ body {
 
 .container {
 	width: 100vw;
-	height: 100vh;
+	height: 100%;
+	min-height: 100vh;
 	display: grid;
 	place-items: center;
 }
