--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -98,9 +98,9 @@ body {
 }
 
 .timers {
-	font-variant-numeric: tabular-nums;
 	font-size: 0.4rem;
-	margin-bottom: 0.5em;
+	font-variant-numeric: tabular-nums;
+	margin: -0.25rem 0 0.5em;
 	overflow: hidden;
 
 	&.shaking {
@@ -121,7 +121,7 @@ body {
 
 .controls {
 	font-size: 0.8rem;
-	margin-bottom: 60px;
+	margin-bottom: 2.5rem;
 
 	a {
 		display: inline-block;
@@ -137,13 +137,13 @@ body {
 
 .timer_button {
 	display: block;
-	margin-bottom: 1rem;
+	margin-bottom: .75rem;
 
 	a {
 		background: $green;
 		border-radius: 14px;
 		color: #fff;
-		padding: 12px 18px 14px;
+		padding: 16px 28px 18px;
 
 		&:hover {
 			background: lighten($green, 3%);
@@ -378,7 +378,7 @@ footer {
 
 	.timers {
 		font-size: 0.9rem;
-		margin-bottom: 2rem;
+		margin-bottom: 3rem;
 	}
 }
 
