--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -59,11 +59,11 @@ body {
 	}
 }
 
-.timer_links {
-	font-size: 0.8rem;
+.timer-options {
+	font-size: 0.5rem;
 
 	> div {
-		display: block;
+		display: inline-block;
 	}
 
 	a {
@@ -71,8 +71,7 @@ body {
 		font-size: 1.953em;
 		color: lighten($red, 38%);
 		text-decoration: none;
-		padding-bottom: 6px;
-		margin: 0 5px 10px;
+		margin: 0 10px 10px;
 
 		&:hover {
 			border-bottom: 2px solid lighten($red, 38%);
@@ -87,20 +86,10 @@ body {
 	}
 }
 
-@keyframes shake {
-	50% {
-		transform: rotate(1deg);
-	}
-
-	100% {
-		transform: rotate(-1deg);
-	}
-}
-
-.timers {
-	font-size: 0.4rem;
+.timer {
+	font-size: 0.5rem;
 	font-variant-numeric: tabular-nums;
-	margin: -0.5rem 0 0.5em;
+	margin: -0.5rem 0 2.5em;
 	overflow: hidden;
 
 	& div.shaking {
@@ -116,6 +105,16 @@ body {
 		&.active {
 			display: block;
 		}
+	}
+}
+
+@keyframes shake {
+	50% {
+		transform: rotate(1deg);
+	}
+
+	100% {
+		transform: rotate(-1deg);
 	}
 }
 
@@ -135,7 +134,7 @@ body {
 	}
 }
 
-.timer_button {
+.timer-button {
 	display: block;
 	margin-bottom: .75rem;
 
@@ -143,7 +142,7 @@ body {
 		background: $green;
 		border-radius: 14px;
 		color: #fff;
-		padding: 16px 28px 18px;
+		padding: 12px 24px 14px;
 
 		&:hover {
 			background: lighten($green, 3%);
@@ -307,18 +306,12 @@ footer {
 }
 
 @media all and (min-width: 590px) and (max-height: 580px) {
-	.timer_links {
-		> div {
-			display: inline-block;
-		}
-	}
-
-	.timer_links {
+	.timer-options {
 		font-size: .75rem;
 		margin-bottom: 0;
 	}
 
-	.timers {
+	.timer {
 		font-size: 0.6rem;
 		margin-bottom: 1rem !important;
 	}
@@ -346,7 +339,11 @@ footer {
 }
 
 @media all and (min-width: 500px) {
-	.timers {
+	.timer-options {
+		font-size: 0.75rem;
+	}
+
+	.timer {
 		font-size: .6rem;
 	}
 
@@ -356,19 +353,25 @@ footer {
 }
 
 @media all and (min-width: 550px) {
-	.timer_links {
+	.timer-options {
 		> div {
 			display: inline-block;
 		}
 	}
 
-	.timers {
+	.timer {
 		font-size: .75rem;
+	}
+
+	.timer-button {
+		a {
+			padding: 16px 28px 18px;
+		}
 	}
 }
 
 @media all and (min-width: 700px) {
-	.timer_links {
+	.timer-options {
 		font-size: 0.9rem;
 
 		a {
@@ -376,27 +379,31 @@ footer {
 			margin-right: 20px;
 		}
 	}
+
+	.timer {
+		font-size: .85rem;
+	}
 }
 
 @media all and (min-width: 1000px) and (min-height: 500px) {
-	.timer_links, .controls {
+	.timer-options, .controls {
 		font-size: 1rem;
 	}
 
-	.timers {
+	.timer {
 		font-size: 0.9rem;
 		margin-bottom: 3rem;
 	}
 }
 
 @media all and (min-width: 1400px) and (min-height: 700px) {
-	.timers {
+	.timer {
 		font-size: 1rem;
 	}
 }
 
 @media all and (max-height: 400px) {
-	.timers {
+	.timer {
 		font-size: .4rem;
 	}
 
